weekly update for 5-June-2019

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>I am Jesus - Week 4</title>
+  <title>I am Jesus - Week 5</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,14 +33,13 @@
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Logo for Current Guide Series" style="max-width:80%;height:auto;"></div>
 
-  <h1>Week 4</h1>
+  <h1>Week 5</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
       <li>What are you excited about doing this summer?</li>
-      <li>What things do you put your hope? (a feeling of expectation and for a certain thing to happen)</li>
-      <li>What other things do you trust? Why?</li>
+      <li>What, if any, steps did you take in the last week to further your relationship with Jesus?</li>
     </ul>
 
   <hr>
@@ -48,7 +47,7 @@
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Have you been or felt lost? What was it like and how did you find your way out of it?</li>
+      <li>Do you ever feel like you’ve been rooted in rotten soil? (Maybe the people you hang out with or the things you do in your free time?) How do you find yourself out of that?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
@@ -57,11 +56,13 @@
       <li>Jesus is the way to heaven, to truth, and to eternal life.</li>
     </ul>
 
+  <hr>
+
   <h2>Scripture</h2>
 
     <ul>
-      <li>John 14:1-7 - “Your heart must not be troubled. Believe in God; believe also in Me. <sup>2</sup> In My Father’s house are many dwelling places; if not, I would have told you. I am going away to prepare a place for you. <sup>3</sup> If I go away and prepare a place for you, I will come back and receive you to Myself, so that where I am you may be also. <sup>4</sup> You know the way to where I am going.” <sup>5</sup> “Lord,” Thomas said, “we don’t know where You’re going. How can we know the way?” <sup>6</sup> Jesus told him, “I am the way, the truth, and the life. No one comes to the Father except through Me. <sup>7</sup> “If you know Me, you will also know My Father. From now on you do know Him and have seen Him.”</li>
-      <li>What is Jesus saying in these scriptures?</li>
+      <li>John 15:5 - I am the vine; you are the branches. The one who remains in Me and I in him produces much fruit, because you can do nothing without Me.</li>
+      <li>What is Jesus saying to you in this scripture?</li>
     </ul>
 
   <hr>
@@ -69,9 +70,9 @@
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>How often do you find yourself listening to other voices of the world and not Jesus’s?</li>
-    <li>If comfortable sharing, is there anything you have a hard time believe about Jesus’s?</li>
-    <li>How much time do you wast a week on stuff like Netflix or social media?</li> <li>We get to heaven through Jesus so why are we not spending more time with Him?</li>
+    <li>What earthly things do you find yourselves rooted in?</li>
+    <li>How often do you find yourself “taping fake fruit” onto your tree of life? Instead of letting what truly lies within you be exposed, you showcase good qualities to others even if they're fake.</li>
+    <li>How often do you find yourself practicing things OPPOSITE of the fruit of the spirit? Instead of love, joy, kindness, and self-control you show hate, meanness, and no control.</li>
   </ul>
 
   <hr>
@@ -81,9 +82,11 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>Personally, what steps do you think you could take to develop heart transformation in your own life?</li>
-      <li>Encourage students to take 20 minutes away from the time they would be watching Netflix or scrolling through social media to spend time with Jesus so they can help develop a strong, lasting relationship with Him.</li>
+      <li>How can you bless others this week with the fruit you are producing?</li>
+      <li>Encourage students to focus on rooting themselves in healthy soil so that they may have a strong foundation with Jesus.</li>
     </ul>
+
+  <hr>
 
   <h2>Take It Out</h2>
 
