weekly update for 12 June 2019

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>I am Jesus - Week 5</title>
+  <title>Volume - Week 1</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -31,67 +31,58 @@
 
 <body>
 
-  <div align="middle"><img src="./img/guide-logo.png" alt="Logo for Current Guide Series" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/guide-logo.png" alt="Volume" style="max-width:80%;height:auto;"></div>
 
-  <h1>Week 5</h1>
+  <h1>Week 1</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>What are you excited about doing this summer?</li>
-      <li>What, if any, steps did you take in the last week to further your relationship with Jesus?</li>
+      <li>What vacations, if any, do you have planned for this summer?</li>
+      <li>What are some things that you love and cherish in your life? It could be a sport, instrument, or food.</li>
     </ul>
-
-  <hr>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Do you ever feel like you’ve been rooted in rotten soil? (Maybe the people you hang out with or the things you do in your free time?) How do you find yourself out of that?</li>
+      <li>Have you ever loved something so much that the people around you never questioned if you loved it? If so, what is that one thing you love so much?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Jesus is the way to heaven, to truth, and to eternal life.</li>
+      <li>Worship is an external talk of an inward walk.</li>
     </ul>
-
-  <hr>
 
   <h2>Scripture</h2>
 
     <ul>
-      <li>John 15:5 - I am the vine; you are the branches. The one who remains in Me and I in him produces much fruit, because you can do nothing without Me.</li>
-      <li>What is Jesus saying to you in this scripture?</li>
+      <li>Hebrews 13:15-16 -  <sup>15</sup> “Through him then let us continually offer up a sacrifice of praise to God, that is, the fruit of lips that acknowledge his name. <sup>16</sup> Do not neglect to do good and to share what you have, for such sacrifices are pleasing to God.”</li>
+      <li>What is Jesus saying in this scripture?</li>
     </ul>
-
-  <hr>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>What earthly things do you find yourselves rooted in?</li>
-    <li>How often do you find yourself “taping fake fruit” onto your tree of life? Instead of letting what truly lies within you be exposed, you showcase good qualities to others even if they're fake.</li>
-    <li>How often do you find yourself practicing things OPPOSITE of the fruit of the spirit? Instead of love, joy, kindness, and self-control you show hate, meanness, and no control.</li>
+    <li>Do you ever find yourself putting on an act to show others that you love God? You go to small group and church on Sunday as a routine but you never truly connect to him.</li>
+    <li>Do you ever give praise and worship for your accomplishments to an idol you’ve created or yourself rather than God? Why?</li>
+    <li>Why do you think we can get caught up just worshiping internally rather than living a life of worship?</li>
   </ul>
-
-  <hr>
 
   <h2>Life Application</h2>
 
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>How can you bless others this week with the fruit you are producing?</li>
-      <li>Encourage students to focus on rooting themselves in healthy soil so that they may have a strong foundation with Jesus.</li>
+      <li>What are a few reasons why you personally don’t worship?</li>
+      <li>How can you channel something in yourself so that you can learn to really understand God and understand why He matters to you?</li>
     </ul>
-
-  <hr>
 
   <h2>Take It Out</h2>
 
   <ul>
     <li>Close small group out with prayer requests.</li>
+    <li>Pray specifically for the upcoming week that your students work to develop their relationship with Jesus so they can go out and build new relationships with people and bring people to Jesus.</li>
     <li>After prayer, be sure to remind them of Movement and THE WEEKEND!</li>
   </ul>
 
