weekly update for 19 June 2019

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>Volume - Week 1</title>
+  <title>Volume - Week 2</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,40 +33,39 @@
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Volume" style="max-width:80%;height:auto;"></div>
 
-  <h1>Week 1</h1>
+  <h1>Week 2</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>What vacations, if any, do you have planned for this summer?</li>
-      <li>What are some things that you love and cherish in your life? It could be a sport, instrument, or food.</li>
+      <li>What exciting things have you done since we last saw you?</li>
+      <li>How many people do you think you come in contact with on a daily? Do you know all of them personally?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Have you ever loved something so much that the people around you never questioned if you loved it? If so, what is that one thing you love so much?</li>
+      <li>Do you ever feel like you really know someone and then they always surprise you with new information about themselves? Give an example.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Worship is an external talk of an inward walk.</li>
+      <li>We worship what we love and know most.</li>
     </ul>
 
   <h2>Scripture</h2>
 
     <ul>
-      <li>Hebrews 13:15-16 -  <sup>15</sup> “Through him then let us continually offer up a sacrifice of praise to God, that is, the fruit of lips that acknowledge his name. <sup>16</sup> Do not neglect to do good and to share what you have, for such sacrifices are pleasing to God.”</li>
+      <li><b>Psalm 100:1-5</b> “Shout joyfully to the Lord, all the earth. Serve the Lord with gladness; Come before Him with joyful singing. Know that the Lord Himself is God; It is He who has made us, and not we ourselves; We are His people and the sheep of His pasture. Enter His gates with thanksgiving And His courts with praise. Give thanks to Him, bless His name. For the Lord is good; His lovingkindness is everlasting And His faithfulness to all generations.”</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Do you ever find yourself putting on an act to show others that you love God? You go to small group and church on Sunday as a routine but you never truly connect to him.</li>
-    <li>Do you ever give praise and worship for your accomplishments to an idol you’ve created or yourself rather than God? Why?</li>
-    <li>Why do you think we can get caught up just worshiping internally rather than living a life of worship?</li>
+    <li>What things in your own personal life feel bigger than God? It could be money, what people say about you, what you think about yourself, and friendships.</li>
+    <li>When something bad happens in our lives, why are we so quick to blame God? He did not create evil and His plan for your life is always true and good.</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,8 +73,8 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What are a few reasons why you personally don’t worship?</li>
-      <li>How can you channel something in yourself so that you can learn to really understand God and understand why He matters to you?</li>
+      <li>What can you do this week to further your relationship with God?</li>
+      <li>How can you keep yourself accountable this week while you work to develop a stronger relationship with Him?</li>
     </ul>
 
   <h2>Take It Out</h2>
