add notice about Freedom Night

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -82,6 +82,7 @@
   <ul>
     <li>Close small group out with prayer requests.</li>
     <li>Pray specifically for the upcoming week that your students work to develop their relationship with Jesus so they can go out and build new relationships with people and bring people to Jesus.</li>
+    <li><mark>Tell your students about FREEDOM NIGHT next week at fpStudents – we are having a cookout, fun games, and a MASSIVE FIREWORKS SHOW after the service. This is a great chance to invite their friends!</mark></li>
     <li>After prayer, be sure to remind them of Movement and THE WEEKEND!</li>
   </ul>
 
