weekly update for 10 July 2019

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>Volume - Week 2</title>
+  <title>Volume - Week 4</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,39 +33,39 @@
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Volume" style="max-width:80%;height:auto;"></div>
 
-  <h1>Week 2</h1>
+  <h1>Week 4</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>What exciting things have you done since we last saw you?</li>
-      <li>How many people do you think you come in contact with on a daily? Do you know all of them personally?</li>
+      <li>What was a high point of your week and a low point of your week?</li>
+      <li>Would you rather receive a gift or give a gift to someone?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Do you ever feel like you really know someone and then they always surprise you with new information about themselves? Give an example.</li>
+      <li>Has there ever been a time where you got a gift for someone and they responded poorly? Explain.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>We worship what we love and know most.</li>
+      <li>We worship God because of what he did for us.</li>
     </ul>
 
   <h2>Scripture</h2>
 
     <ul>
-      <li><b>Psalm 100:1-5</b> “Shout joyfully to the Lord, all the earth. Serve the Lord with gladness; Come before Him with joyful singing. Know that the Lord Himself is God; It is He who has made us, and not we ourselves; We are His people and the sheep of His pasture. Enter His gates with thanksgiving And His courts with praise. Give thanks to Him, bless His name. For the Lord is good; His lovingkindness is everlasting And His faithfulness to all generations.”</li>
+      <li><b>Romans 12:1 NLT</b> “And so, dear brothers and sisters, I plead with you to give your bodies to God because of all he has done for you. Let them be a living and holy sacrifice—the kind he will find acceptable. This is truly the way to worship him.”</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>What things in your own personal life feel bigger than God? It could be money, what people say about you, what you think about yourself, and friendships.</li>
-    <li>When something bad happens in our lives, why are we so quick to blame God? He did not create evil and His plan for your life is always true and good.</li>
+    <li>Personally, how do you see the chains of sin hurting your life? It could be ruining your family, relationships, or yourself.</li>
+    <li>How do you believe God can help take those chains of sin away from you so you can have a strong relationship with Jesus?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -73,16 +73,14 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What can you do this week to further your relationship with God?</li>
-      <li>How can you keep yourself accountable this week while you work to develop a stronger relationship with Him?</li>
+      <li>The way to truly worship God is to live for Him. What things do you do in your life that are not acceptable in the eyes of God?</li>
+      <li>How do you think you can change that?</li>
     </ul>
 
   <h2>Take It Out</h2>
 
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>Pray specifically for the upcoming week that your students work to develop their relationship with Jesus so they can go out and build new relationships with people and bring people to Jesus.</li>
-    <li><mark>Tell your students about FREEDOM NIGHT next week at fpStudents – we are having a cookout, fun games, and a MASSIVE FIREWORKS SHOW after the service. This is a great chance to invite their friends!</mark></li>
     <li>After prayer, be sure to remind them of Movement and THE WEEKEND!</li>
   </ul>
 
