weekly update for 17 July 2019

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>Volume - Week 4</title>
+  <title>Values - Week 1</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -31,41 +31,41 @@
 
 <body>
 
-  <div align="middle"><img src="./img/guide-logo.png" alt="Volume" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/fps-logo.png" alt="FPS Logo" style="max-width:80%;height:auto;"></div>
 
-  <h1>Week 4</h1>
+  <h1><i>Values</i> Week 1</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>What was a high point of your week and a low point of your week?</li>
-      <li>Would you rather receive a gift or give a gift to someone?</li>
+      <li>Are you guys excited for Movement?</li>
+      <li>What vacations has everybody been on this summer?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Has there ever been a time where you got a gift for someone and they responded poorly? Explain.</li>
+      <li>What big life choices are you struggling with right now? (College, friends, relationships)</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>We worship God because of what he did for us.</li>
+      <li>Putting God first makes filling in the blank easy.</li>
     </ul>
 
   <h2>Scripture</h2>
 
+    <p><b>Matthew 10:37-39 (NLT)</b> If you love your father or mother more than you love me, you are not worthy of being mine; or if you love your son or daughter more than me, you are not worthy of being mine. <sup>38</sup> If you refuse to take up your cross and follow me, you are not worthy of being mine. <sup>39</sup> If you cling to your life, you will lose it; but if you give up your life for me, you will find it.</p>
     <ul>
-      <li><b>Romans 12:1 NLT</b> “And so, dear brothers and sisters, I plead with you to give your bodies to God because of all he has done for you. Let them be a living and holy sacrifice—the kind he will find acceptable. This is truly the way to worship him.”</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Personally, how do you see the chains of sin hurting your life? It could be ruining your family, relationships, or yourself.</li>
-    <li>How do you believe God can help take those chains of sin away from you so you can have a strong relationship with Jesus?</li>
+    <li>Personally, what things in your life are first place or above God?</li>
+    <li>Whatever is distracting you from God, what would happen if you let it all go this week?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -73,8 +73,8 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>The way to truly worship God is to live for Him. What things do you do in your life that are not acceptable in the eyes of God?</li>
-      <li>How do you think you can change that?</li>
+      <li>What personal things do you want to take away from Movement?</li>
+      <li>Challenge the students to go into movement with a blank in “Where the Spirit leads…” and tell them to let God fill the blank over the next few days.</li>
     </ul>
 
   <h2>Take It Out</h2>
