add html roster data

--- a/mvmt19/rosters/6-boys.html
+++ b/mvmt19/rosters/6-boys.html
@@ -27,36 +27,41 @@
   <h1>6th Grade Boys</h1>
 
   <p><b>Brandon Noe</b><br>
-    Everett Jones<br>
-    Connor Brown<br>
+    Everett Jones<br>	
+    Connor Brown <i>backpack</i><br>
     Ethan Crawford<br>
-    Caleb Willen<br>
+    Caleb Willen <i>backpack</i><br>
     Austin Henderson<br>
     Brennon Luster<br>
+    Jackson Fortner <i>arriving Thursday after 9PM</i><br>
+    Wyatt Lawson<br>
   </p>
 
   <p><b>Keegan McClain</b><br>
     Braden Nitzsche<br>
-    Caden Cheverton<br>
-    Kasey Payne<br>
+    Caden Cheverton <i>backpack</i><br>
+    Kasey Payne <i>backpack</i><br>
     Gavin Wilson<br>
     Alex Hernandez<br>
   </p>
 
   <p><b>Zach Znachko / Alex Hart</b><br>
     Jessy Muffett<br>
-    AJ Berrio<br>
+    AJ Berrio <i>backpack</i><br>
     Caleb Dice<br>
     Brayden Powell<br>
     Grayson Anderson<br>
     Diego Wallace<br>
     Colin Suddeth<br>
+    Ethan Kerwin<br>
+    Greyson Tilley<br>
   </p>
 
   <p><b>John Choate</b><br>
     Luke Bates<br>
     Jaxsen Kanipes<br>
     Leland Hulsey<br>
+    Ethan Eubanks	<i>has asthma</i><br>
   </p>
 
   <p><b>Needs A Leader</b><br>
