--- a/mvmt19/rosters/6-girls.html
+++ b/mvmt19/rosters/6-girls.html
@@ -26,18 +26,56 @@
 
   <h1>6th Grade Girls</h1>
 
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
+  <p><b>Hannah Engblom</b><br>
+    Elaina Stringfellow <i>backpack</i><br>
+    Sophia Newton <i>backpack</i><br>
+    Malorie Rice <i>backpack</i><br>
+    Emma Liles<br>
+    Lauren Gray <i>backpack</i><br>
+    Madelyn Paquette <i>backpack</i><br>
+    Gracie Maiorino <i>backpack</i><br>
+    Madison Whitehead<br>
+    Sadie Stephens<br>
+    Kaitlyn Turner <i>backpack</i><br>
+    Katherine Burgess<br>
+    Madison Haynes<br>
   </p>
 
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
+  <p><b>Marta Crass / Emma Madison</b><br>
+    Grace Baaklini <i>backpack</i><br>
+    Autumn Godfrey<br>
+    Alyssia Hernandez<br>
+    Addison Noe<br>
+    Mileigh Atkins<br>
+    Jordan Thurston<br>
+    Chloe Botts<br>
+    Katelyn Maples<br>
+  </p>
+
+  <p><b>Patty Hylton</b><br>
+    Kate Crass<br>
+    Vanessa Grant <i>backpack</i><br>
+    Charlotte Chrimes <i>backpack</i><br>
+    Bailey Powell<br>
+    Rylee Shaffer<br>
+    Ava Claire Wrather<br>
+    Ella Akin<br>
+  </p>
+
+  <p><b>Lindsey Johnson</b><br>
+    Lauren Lanning <i>backpack</i><br>
+    Riley Kate Martin<br>
+    Ryan Davenport<br>
+    Kayla Ray<br>
+    Sydney Haun<br>
+    Keira Allen<br>
   </p>
 
   <p><b>Needs A Leader</b><br>
-    Student 5<br>
+    Braelyn Hardin<br>
+    Maleah Shelton<br>
+    Abby Stone<br>
+    Nevaeh Reynolds<br>
   </p>
 
 </body>
