--- a/mvmt19/rosters/7-boys.html
+++ b/mvmt19/rosters/7-boys.html
@@ -26,18 +26,33 @@
 
   <h1>7th Grade Boys</h1>
 
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
+  <p><b>Jayden Emison</b><br>
+    Nathaniel Loy	<i>Peanut, tree nut, coconut allergies</i><br>
+    Elijah Maughon<br>
+    Will Tucker<br>
+    Hampton Chrimes<br>
   </p>
 
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
+  <p><b>Jordan Martin / Zach Rutland</b><br>
+    Caleb Sweet<br>
+    Noah Vlahakis<br>
+    Jackson Smith<br>
+    Landon Smith <i>HGH shots at night, meds in morning</i><br>
+    Ben Dallas<br>
+    Nathan A Deuble	<i>Gluten Free, Dairy Free, Soy Free</i><br>
+    Matthew Merli<br>
   </p>
 
-  <p><b>Needs A Leader</b><br>
-    Student 5<br>
+  <p><b>Marc Courts / Talon Hill</b><br>
+    Case Whitaker<br>
+    Jaxson Denton<br>
+    Lawrence Tate<br>
+    Tyler John<br>
+    Cale Howe <i>Nightly meds for ADHD</i><br>
+    Nicholas Goodgame<br>
+    Bennett Greene<br>
+    Grant Wells<br>
+    Sharles II Johnson<br>
   </p>
 
 </body>
