--- a/mvmt19/rosters/7-girls.html
+++ b/mvmt19/rosters/7-girls.html
@@ -26,20 +26,42 @@
 
   <h1>7th Grade Girls</h1>
 
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
+  <p><b>Cindy Montoya</b><br>
+    Annabelle Lesch	<i>Tree nut allergy, backpack</i><br>
+    Molly Glenn<br>
+    Emma Martin <i>backpack</i><br>
+    Kamryn Anderson <i>backpack</i><br>
+    Madison Perrin<br>
   </p>
 
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
+  <p><b>Didi Reeves / Caroline Owens / Jaide Belk</b><br>
+    Brookelynne Hamilton<br>
+    Caroline Logan <i>backpack</i><br>
+    Chloe Surlas <i>backpack</i><br>
+    Reece Taylor <i>backpack</i><br>
+    Amelia Harvey<br>
+    Samantha Gilmore<br>
+    Abby Kelton<br>
+    Ilani Milton<br>    
   </p>
 
-  <p><b>Needs A Leader</b><br>
-    Student 5<br>
+  <p><b>Karyn Engblom</b><br>
+    Macy Lowe<br>
+    Gracie Goin<br>
+    Charlotte Cole <i>backpack</i><br>
+    Daniella Rice<br>
+    Grace Flores<br>
+    Campbell Patterson<br>
+    Riley Allred<br>
+    Nyla Jordan <i>type 1 Diabetic</i><br>
   </p>
   
+  <p><b>Lucy Northern / Angela Mattioli</b><br>
+    Alyssa Lechleitner<br>
+    Haley Elizabeth Yager<br>
+    Jaide Robinson<br>
+  </p>
+
 </body>
 
 </html>
