--- a/mvmt19/rosters/8-boys.html
+++ b/mvmt19/rosters/8-boys.html
@@ -26,18 +26,40 @@
 
   <h1>8th Grade Boys</h1>
 
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
+  <p><b>Jasper Emerson</b><br>
+    Brycen Hamilton<br>
+    Austin Wirtz <i>backpack</i><br>
+    Riley Anderson<br>
+    Ethan Crandall<br>
+    Coban White<br>
   </p>
 
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
+  <p><b>Tyler Owens / Gary Carter</b><br>
+    Caleb Sweet <i>backpack</i><br>
+    Landon Daley <i>backpack</i><br>
+    Hunter Brown <i>backpack</i><br>
+    Connor Vanosdale<br>
+    Hayden Whitehead<br>
+    Benjamin George<br>
+    Kaydin Wagner <i>backpack</i><br>
+    Gavin Paquette<br>    
   </p>
 
-  <p><b>Needs A Leader</b><br>
-    Student 5<br>
+  <p><b>Tyler Shaffer / Tanner Gaspard</b><br>
+    Elijah Miller <i>backpack</i><br>
+    Riley Hartlin <i>backpack</i>e<br>
+    Jacob Reinbolt<br>
+    Reilly Dishner<br>
+    Maverick Henderson<br>
+    Dillon Clark <i>ADHD meds</i><br>
+    Brock Metts<br>
+    Griffin Cox <i>ADHD, not medicated per physician</i><br>
+  </p>
+
+  <p><b>Chad Helland / Dave Gannon</b><br>
+    Bailey Wilson<br>
+    Seth Perkins<br>
+    Andrew Fritts<br>
   </p>
   
 </body>
