--- a/mvmt19/rosters/8-girls.html
+++ b/mvmt19/rosters/8-girls.html
@@ -26,20 +26,51 @@
 
   <h1>8th Grade Girls</h1>
 
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
+  <p><b>Jordan Lindsay / Brittany Pollard</b><br>
+    Leanna Johnson<br>
+    Tessa Krokowski<br>
+    Addie Rittenhouse<br>
+    Julia Linkous<br>
+    Hannah Barker<br>
+    Elizabeth Ford<br>
+    Emilie Duncan<br>
   </p>
 
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
+  <p><b>Kristen Peel</b><br>
+    Mckayla Muse <i>backpack</i><br>
+    Canie Smith<br>
+    Jayden Phillips<br>
+    Sophia Dyke<br>    
   </p>
 
-  <p><b>Needs A Leader</b><br>
-    Student 5<br>
+  <p><b>Taylor Pritchett / Maggie Carringer</b><br>
+    Liana Lopez<br>
+    Olivia Rhea<br>
+    Katelynn Hayes<br>    
   </p>
   
+  <p><b>Shelbey Stephens</b><br>
+    Kylee Thompson	<i>backpack</i><br>
+    Vivian Newton	<i>backpack</i><br>
+    Kate Wilson<br>    
+  </p>
+
+  <p><b>Jessie Owens</b><br>
+    Isabella Reeves	<i>Nightly meds for adhd</i><br>
+    Emma Cooke<br>
+    Marnasia England<br>
+    Te'shauria Akinleye<br>
+    Riley Estes	<i>backpack</i><br>
+    Cara Akin<br>
+  </p>
+
+  <p><b>Christy Sanders</b><br>
+    Sydney Freels<br>
+    Makaylah Cain<br>
+    Jemma Reed<br>
+    Lyndsey Dodge<br>
+    Shentasia Johnson<br>
+  </p>
 </body>
 
 </html>
