add backpack info

--- a/mvmt19/rosters/7-boys.html
+++ b/mvmt19/rosters/7-boys.html
@@ -28,28 +28,28 @@
 
   <p><b>Jayden Emison</b><br>
     Nathaniel Loy	<i>Peanut, tree nut, coconut allergies</i><br>
-    Elijah Maughon<br>
-    Will Tucker<br>
+    Elijah Maughon <i>backpack</i><br>
+    Will Tucker <i>backpack</i><br>
     Hampton Chrimes<br>
   </p>
 
   <p><b>Jordan Martin / Zach Rutland</b><br>
     Caleb Sweet<br>
     Noah Vlahakis<br>
-    Jackson Smith<br>
+    Jackson Smith <i>backpack</i><br>
     Landon Smith <i>HGH shots at night, meds in morning</i><br>
-    Ben Dallas<br>
+    Ben Dallas <i>backpack</i><br>
     Nathan A Deuble	<i>Gluten Free, Dairy Free, Soy Free</i><br>
     Matthew Merli<br>
   </p>
 
   <p><b>Marc Courts / Talon Hill</b><br>
-    Case Whitaker<br>
+    Case Whitaker <i>backpack</i><br>
     Jaxson Denton<br>
     Lawrence Tate<br>
-    Tyler John<br>
+    <s>Tyler John</s> <i>backpack</i><br>
     Cale Howe <i>Nightly meds for ADHD</i><br>
-    Nicholas Goodgame<br>
+    Nicholas Goodgame <i>backpack</i><br>
     Bennett Greene<br>
     Grant Wells<br>
     Sharles II Johnson<br>
