--- a/mvmt19/rosters/7-boys.html
+++ b/mvmt19/rosters/7-boys.html
@@ -47,11 +47,13 @@
     Case Whitaker <i>backpack</i><br>
     Jaxson Denton<br>
     Lawrence Tate<br>
-    <s>Tyler John</s> <i>backpack</i><br>
     Cale Howe <i>Nightly meds for ADHD</i><br>
     Nicholas Goodgame <i>backpack</i><br>
     Bennett Greene<br>
     Grant Wells<br>
+  </p>
+
+  <p><b>Needs Leader</b><br>
     Sharles II Johnson<br>
   </p>
 
