--- a/mvmt19/rosters/8-girls.html
+++ b/mvmt19/rosters/8-girls.html
@@ -69,6 +69,9 @@
     Makaylah Cain<br>
     Jemma Reed<br>
     Lyndsey Dodge<br>
+  </p>
+
+  <p><b>Needs Leader</b><br>
     Shentasia Johnson<br>
   </p>
 </body>
