--- a/mvmt19/rosters/9-boys.html
+++ b/mvmt19/rosters/9-boys.html
@@ -26,18 +26,31 @@
 
   <h1>9th Grade Boys</h1>
 
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
+  <p><b>Callen Harrell / Clay England</b><br>
+    Riley Keegan<br>
+    Conner Frost<br>
+    Josiah Swafford<br>
+    Cole Jordan<br>
+    CJ Saffell <i>Asthma</i><br>
   </p>
 
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
+  <p><b>John Pipkin</b><br>
+    Parker Helland	<i>backpack</i><br>
+    Hayden Farrell<br>
   </p>
 
-  <p><b>Needs A Leader</b><br>
-    Student 5<br>
+  <p><b>Marc Courts</b><br>
+    Isaiah Stinnett<br>
+    Jaden Miller <i>backpack</i><br>
+    Seth Stephens<br>
+    Andrew Ford<br>
+    Jaxon Bampfield<br>
+    Jonathan Merli<br>
+    Jackson Greene<br>
+  </p>
+
+  <p><b>Needs a Leader</b><br>
+    Eli Parks<br>
   </p>
   
 </body>
