--- a/mvmt19/rosters/8-boys.html
+++ b/mvmt19/rosters/8-boys.html
@@ -47,7 +47,7 @@
 
   <p><b>Tyler Shaffer / Tanner Gaspard</b><br>
     Elijah Miller <i>backpack</i><br>
-    Riley Hartlin <i>backpack</i>e<br>
+    Riley Hartline <i>backpack</i><br>
     Jacob Reinbolt<br>
     Reilly Dishner<br>
     Maverick Henderson<br>
