--- a/mvmt19/rosters/10-girls.html
+++ b/mvmt19/rosters/10-girls.html
@@ -26,18 +26,39 @@
 
   <h1>10th Grade Girls</h1>
 
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
+  <p><b>Anna Leah Drummer / Erin Rhoades</b><br>
+    McKinley Irwin<br>
+    Alaina Johnson<br>
+    Cameron Castleberry <i>backpack</i><br>
+    Sophia Porpiglia<br>
+    Brianna Greer<br>
+    Gracie Fritts<br>
+    Jaden Houston<br>
   </p>
 
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
+  <p><b>Kourtney Daigle / Dallas King</b><br>
+    Akexis Grant<br>
+    Mckenzie Loy<br>
+    Emma Leonard<br>
+    Bailee Hackney<br>
+    Tori Patterson<br>
+    Sarah A. Harvey<br>
+    Aimee Romero<br>    
   </p>
 
-  <p><b>Needs A Leader</b><br>
-    Student 5<br>
+  <p><b>Lisa Wyatt</b><br>
+    Arielle Brengle<br>
+    Shay Tate<br>
+    Abbey Parrish<br>
+    Emma Grace Martin<br>
+    Haley Holman<br>
+    Savannah Booher<br>
+    Shaud'liah Akinleye<br>
+    Adrianna West<br>
+  </p>
+
+  <p><b>Needs a Leader</b><br>
+    Shaque Johnson<br>
   </p>
   
 </body>
