--- a/mvmt19/rosters/11-boys.html
+++ b/mvmt19/rosters/11-boys.html
@@ -26,18 +26,19 @@
 
   <h1>1th Grade Boys</h1>
 
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
-  </p>
-
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
-  </p>
-
-  <p><b>Needs A Leader</b><br>
-    Student 5<br>
+  <p><b>Landon Mann / Michael May</b><br>
+    Nathan Lechleitner<br>
+    Ethan Cox <i>backpack</i><br>
+    Justice Blair<br>
+    Tyler Nitzsche<br>
+    Ethan Howe <i>backpack</i><br>
+    Peter Emerson	<br>
+    Christopher Vinson<br>
+    Aaron Bradford (AJ)<br>
+    Cameron Karimian<br>
+    Micah Merli<br>
+    Derek Whitaker<br>
+    Tommy Sweat<br>
   </p>
   
 </body>
