--- a/mvmt19/rosters/11-girls.html
+++ b/mvmt19/rosters/11-girls.html
@@ -26,18 +26,56 @@
 
   <h1>11th Grade Girls</h1>
   
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
+  <p><b>Kayla Ross</b><br>
+    Katie Emison<br>
+    Amber Godfrey<br>
+    Bry Miller <i>backpack</i><br>
+    Abbie Duncan<br>
   </p>
 
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
+  <p><b>Laurren Williams</b><br>
+    Karly Emison<br>
+    Liliana Ortega <i>backpack</i><br>
+    Kaylee Smith <i>backpack</i><br>
+    McKenna May<br>
+    Jewel English<br>  
   </p>
 
-  <p><b>Needs A Leader</b><br>
-    Student 5<br>
+  <p><b>Madelyn Oster</b><br>
+    Hannah Perkins<br>
+    Kiersten Dutrow<br>
+    Katlyn Hartline<br>
+    Olivia<br>
+    Madeline Linkous<br>
+    Kailey Shaw<br>
+    Keana Way<br>
+    Ally Bement<br>
+  </p>
+
+  <p><b>Taylor Henry</b><br>
+    Katelyn Dishner<br>
+    Kendra Rice <i>backpack</i><br>
+    Abby Chakales<br>
+    Abby Lamb<br>
+    Valentina Bedoya<br>
+    Saddie Swafford<br>
+    Keely Mowris<br>
+    Callie Swafford	<i>Allergies: gluten, peanuts, almonds, red and purple food dyes</i><br>
+    N'deye Akinleye<br>
+  </p>
+
+  <p><b>Amber Lowry / Valerie Harrell</b><br>
+    Shelby Rosenberger<br>
+    Hannah Tarwater<br>
+    Reagan Ross<br>
+    Catherine Sage<br>
+    Katy Cooke<br>
+    Madison Green<br>
+    Riley Holden<br>
+  </p>
+
+  <p><b>Needs a Leader</b><br>
+    Jadyn McCrane<br>
   </p>
 
 </body>
