--- a/mvmt19/rosters/12-boys.html
+++ b/mvmt19/rosters/12-boys.html
@@ -26,18 +26,27 @@
 
   <h1>12th Grade Boys</h1>
 
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
+  <p><b>Chase Brabston</b><br>
+    Dominic Porpiglia<br>
+    Keenan Sloan<br>
+    Jonathan Mason<br>  
   </p>
 
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
+  <p><b>James McKamey / Paul Moody</b><br>
+    Derek Green<br>
+    Brandon Ray<br>
+    Hunter Doefler<br>
+    Kevin Schell<br>
   </p>
 
-  <p><b>Needs A Leader</b><br>
-    Student 5<br>
+  <p><b>Marty Vinson / Jason Humphrey</b><br>
+    Adam Lechleitner<br>
+    Elijah Bivens<br>
+    Nathan Bradford<br>
+    Bailey Walker<br>
+    Connor Mitchell <i>backpack</i><br>
+    Matt Austin<br>
+    Brandon Jordan <i>Milk/Dairy allergy</i><br>
   </p>
   
 </body>
