--- a/mvmt19/rosters/12-girls.html
+++ b/mvmt19/rosters/12-girls.html
@@ -26,18 +26,49 @@
 
   <h1>12th Grade Girls</h1>
 
-  <p><b>Leader A</b><br>
-    Student 1<br>
-    Student 2<br>
+  <p><b>Beth Braden / Symira McKenzie Milton</b><br>
+    Kelsey Potter
+    Rachel Beaumont
   </p>
 
-  <p><b>Leader B</b><br>
-    Student 3<br>
-    Student 4<br>
+  <p><b>Cindy Montoya</b><br>
+    Megan Smith <i>backpack</i><br>
+    Brittany Huckaby<br>
+    Hannah Dew<br>
+    Madison Asbury <i>learning impairments, Brittany is a great buddy / helper</i><br>
   </p>
 
-  <p><b>Needs A Leader</b><br>
-    Student 5<br>
+  <p><b>Lisa Cole</b><br>
+    Teneia Harris <i>backpack</i><br>
+    Rachel Tankersley<br>
+    Sarah Jennings<br>
+    Ricki Stevenson<br>
+    Lucy Northern<br>
+    Mackenzie Critz<br>
+    Madi Lamon<br>
+  </p>
+
+  <p><b>Madeline Tampas</b><br>
+    Janna Emison<br>
+    Annie Cole <i>backpack</i><br>
+    Layla Sanford<br>
+    Terra Holly<br>
+    Christa Pellham<br>
+  </p>
+
+  <p><b>Shanae Cruise</b><br>
+    Chloe Edgin<br>
+    Maddie Reibenspies<br>
+    Samantha Godfrey<br>
+    Haley Roberts<br>
+    Maddie Robinson<br>
+    Devon Clark<br>
+    Taylor Lynn Greene<br>
+  </p>
+
+  <p><b>Needs a Leader</b><br>
+    Macey McDonald<br>
+    Shakiah Johnson<br> 
   </p>
 
 </body>
