--- a/mvmt19/rosters/9-girls.html
+++ b/mvmt19/rosters/9-girls.html
@@ -62,7 +62,7 @@
     Angeli Romero<br>    
   </p>
 
-  <p><b>Stacey Loy and Yasmin Karimian</b><br>
+  <p><b>Stacey Loy / Yasmin Karimian</b><br>
     Sheelove Knowles <i>backpack</i><br>
     Ragan Sanders<br>
     Conley Shaw<br>
